--- a/index.html
+++ b/index.html
@@ -4,8 +4,74 @@
     <head>
         <meta charset="utf-8">
         <title>FriendCode</title>
+        <link rel="stylesheet" href="bootstrap.min.css">
         <link rel="stylesheet" href="homepage.css">
+        <link href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     </head>
-    <body></body>
+    <body>
+        <header>
+            <div class="intro">
+                <h1>FriendCode</h1>
+                <h2>We're here to create the development environment of the future.</h2>
+            </div>
+        </header>
+
+        <!-- Story -->
+        <section>
+            <h1>Our Story</h1>
+            <p>FriendCode was created in 2013 with the vision of combining the infinite power of the cloud with the most simple and elegant user interface to push developer's tools on the cloud and make it easy for developers to collaborate on code anywhere, at anytime.</p>
+        </section>
+
+        <!-- Team -->
+        <section class="clearfix">
+            <h1>Our Team</h1>
+            <ul class="team">
+                <li>
+                    <a href="https://github.com/SamyPesse">
+                        <img src="images/team/samy.png">
+                    </a>
+                    <h4>Samy Pessé</h4>
+                    <p>Co-Founder, Front-end lover</p>
+                </li>   
+                <li>
+                    <a href="https://github.com/AaronO">
+                        <img src="images/team/aaron.png">
+                    </a>
+                    <h4>Aaron O'Mullan</h4>
+                    <p>Co-Founder, Back-end lover</p>
+                </li> 
+                <li>
+                    <a href="mailto:contact@friendco.de" class="icon"><i class="fa fa-plus"></i></a>
+                    <h4>You</h4>
+                    <p>Want to join the team ?</p>
+                </li>
+            </ul>
+        </section>
+
+        <!-- Investors -->
+        <section class="clearfix">
+            <h1>Our Investors &amp; Advisors</h1>
+            <ul class="team"> 
+                <li>
+                    <a href="https://twitter.com/jberrebi">
+                        <img src="images/investors/jberrebi.jpeg">
+                    </a>
+                    <h4>Jeremie Berrebi</h4>
+                    <p>Investor (Kima Ventures)</p>
+                </li>
+                <li>
+                    <a href="https://twitter.com/_javigon">
+                        <img src="images/investors/javier.jpeg">
+                    </a>
+                    <h4>Javier Gonzalez</h4>
+                    <p>Advisor (Business Angel)</p>
+                </li> 
+            </ul>
+        </section>
+
+        <footer>
+            <p class="copyright">Made with <i class="fa fa-heart"></i> in Paris and San Francisco</p>
+        </footer>
+    </body>
 </html>
