--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>FriendCode</title>
         <link rel="stylesheet" href="bootstrap.min.css">
         <link rel="stylesheet" href="homepage.css">
+        <link rel="icon" href="images/favicon.png">
         <link href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     </head>
