Add link to codebox and basic values

--- a/index.html
+++ b/index.html
@@ -15,13 +15,58 @@
             <div class="intro">
                 <h1>FriendCode</h1>
                 <h2>We're here to create the development environment of the future.</h2>
+                <p><a class="big-link" href="https://www.codebox.io">Discover our product</a></p>
             </div>
         </header>
 
         <!-- Story -->
         <section>
-            <h1>Our Story</h1>
             <p>FriendCode was created in 2013 with the vision of combining the infinite power of the cloud with the most simple and elegant user interface to push developer's tools on the cloud and make it easy for developers to collaborate on code anywhere, at anytime.</p>
+
+            <div class="values">
+                <div class="value">
+                    <div class="value-icon">
+                        <i class="fa fa-cloud"></i>
+                    </div>
+                    <h3>The Cloud is your ally</h3>
+                    <p>We believe that a cloud based development environment is the future.</p>
+                </div>
+                <div class="value">
+                    <div class="value-icon">
+                        <i class="fa fa-lightbulb-o"></i>
+                    </div>
+                    <h3>Collaborative ideas</h3>
+                    <p>We're all one big team. We make decisions together. Your ideas matter.</p>
+                </div>
+                <div class="value">
+                    <div class="value-icon">
+                        <i class="fa fa-bolt"></i>
+                    </div>
+                    <h3>Implement fast</h3>
+                    <p>We love implementing and improving things quickly. It's not rare for us to do release a day.</p>
+                </div>
+                <div class="value">
+                    <div class="value-icon">
+                        <i class="fa fa-exchange"></i>
+                    </div>
+                    <h3>Collaboration</h3>
+                    <p>We believe that collaboration can change and vastly improve the way we all work.</p>
+                </div>
+                <div class="value">
+                    <div class="value-icon">
+                        <i class="fa fa-road"></i>
+                    </div>
+                    <h3>Cutting edge technology</h3>
+                    <p>We use and build cutting edge technology to power ours products.</p>
+                </div>
+                <div class="value">
+                    <div class="value-icon">
+                        <i class="fa fa-heart-o"></i>
+                    </div>
+                    <h3>Passion</h3>
+                    <p>Improving how developers work, is something we're very passionate about.</p>
+                </div>
+            </div>
         </section>
 
         <!-- Team -->
