--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         </section>
 
         <footer>
-            <p class="copyright">Made with <i class="fa fa-heart"></i> in Paris and San Francisco</p>
+            Made with <i class="fa fa-heart"></i> in Paris and San Francisco
         </footer>
     </body>
 </html>
