Add codebox logo

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 
         <!-- Story -->
         <section>
+            <a href="https://www.codebox.io" class="codebox-logo"><img width="128" src="images/codebox/logo128.png" /></a>
             <p>FriendCode was created in 2013 with the vision of combining the infinite power of the cloud with the most simple and elegant user interface to push developer's tools on the cloud and make it easy for developers to collaborate on code anywhere, at anytime.</p>
+            <p>We are building <a href="https://www.codebox.io">Codebox</a>, an open source Cloud IDE, than can both run on the cloud,  your desktop or your server. <a href="https://www.codebox.io">Codebox.io</a> lets you host and manage Codebox instances online as a service using a dashboard or an API.</p>
 
             <div class="values">
                 <div class="value">
