Improve wording in some places in index.html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
     <head>
@@ -14,7 +13,7 @@
         <header>
             <div class="intro">
                 <h1>FriendCode</h1>
-                <h2>We're here to create the development environment of the future.</h2>
+                <h2>We're here to create the development tools of the future.</h2>
                 <p><a class="big-link" href="https://www.codebox.io">Discover our product</a></p>
             </div>
         </header>
@@ -22,8 +21,8 @@
         <!-- Story -->
         <section>
             <a href="https://www.codebox.io" class="codebox-logo"><img width="128" src="images/codebox/logo128.png" /></a>
-            <p>FriendCode was created in 2013 with the vision of combining the infinite power of the cloud with the most simple and elegant user interface to push developer's tools on the cloud and make it easy for developers to collaborate on code anywhere, at anytime.</p>
-            <p>We are building <a href="https://www.codebox.io">Codebox</a>, an open source Cloud IDE, than can both run on the cloud,  your desktop or your server. <a href="https://www.codebox.io">Codebox.io</a> lets you host and manage Codebox instances online as a service using a dashboard or an API.</p>
+            <p>FriendCode was created in 2013 with the vision of creating powerful development tools, tackling issues like collaboration, cloud development and many others.</p>
+            <p>We are building <a href="https://www.codebox.io">Codebox</a>, an open source Cloud IDE, than can run only on the cloud, but on your desktop or your server as well. <a href="https://www.codebox.io">Codebox.io</a> lets you host and manage Codebox instances online as a service using a dashboard or an API.</p>
 
             <div class="values">
                 <div class="value">
