Update aaron's picture

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 </li>   
                 <li>
                     <a href="https://github.com/AaronO">
-                        <img src="images/team/aaron.png">
+                        <img src="images/team/aaron.jpg">
                     </a>
                     <h4>Aaron O'Mullan</h4>
                     <p>Co-Founder, Back-end lover</p>
