Fix small typo in index.html

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <section>
             <a href="https://www.codebox.io" class="codebox-logo"><img width="128" src="images/codebox/logo128.png" /></a>
             <p>FriendCode was created in 2013 with the vision of creating powerful development tools, tackling issues like collaboration, cloud development and many others.</p>
-            <p>We are building <a href="https://www.codebox.io">Codebox</a>, an open source Cloud IDE, than can run only on the cloud, but on your desktop or your server as well. <a href="https://www.codebox.io">Codebox.io</a> lets you host and manage Codebox instances online as a service using a dashboard or an API.</p>
+            <p>We are building <a href="https://www.codebox.io">Codebox</a>, an open source Cloud IDE, than can run not only on the cloud, but on your desktop or your server as well. <a href="https://www.codebox.io">Codebox.io</a> lets you host and manage Codebox instances online as a service using a dashboard or an API.</p>
 
             <div class="values">
                 <div class="value">
