Set redirection to codebox.io/about

--- a/index.html
+++ b/index.html
@@ -2,123 +2,9 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>FriendCode</title>
-        <link rel="stylesheet" href="bootstrap.min.css">
-        <link rel="stylesheet" href="homepage.css">
-        <link rel="icon" href="images/favicon.png">
-        <link href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+        <title>Redirection to codebox.io</title>
+        <meta http-equiv="refresh" content="0; url=https://www.codebox.io/about">
+        <link rel="canonical" href="https://www.codebox.io/about" />
     </head>
-    <body>
-        <header>
-            <div class="intro">
-                <h1>FriendCode</h1>
-                <h2>We're here to create the development tools of the future.</h2>
-                <p><a class="big-link" href="https://www.codebox.io">Discover our product</a></p>
-            </div>
-        </header>
-
-        <!-- Story -->
-        <section>
-            <a href="https://www.codebox.io" class="codebox-logo"><img width="128" src="images/codebox/logo128.png" /></a>
-            <p>FriendCode was created in 2013 with the vision of creating powerful development tools, tackling issues like collaboration, cloud development and many others.</p>
-            <p>We are building <a href="https://www.codebox.io">Codebox</a>, an open source Cloud IDE, than can run not only on the cloud, but on your desktop or your server as well. <a href="https://www.codebox.io">Codebox.io</a> lets you host and manage Codebox instances online as a service using a dashboard or an API.</p>
-
-            <div class="values">
-                <div class="value">
-                    <div class="value-icon">
-                        <i class="fa fa-cloud"></i>
-                    </div>
-                    <h3>The Cloud is your ally</h3>
-                    <p>We believe that a cloud based development environment is the future.</p>
-                </div>
-                <div class="value">
-                    <div class="value-icon">
-                        <i class="fa fa-lightbulb-o"></i>
-                    </div>
-                    <h3>Collaborative ideas</h3>
-                    <p>We're all one big team. We make decisions together. Your ideas matter.</p>
-                </div>
-                <div class="value">
-                    <div class="value-icon">
-                        <i class="fa fa-bolt"></i>
-                    </div>
-                    <h3>Implement fast</h3>
-                    <p>We love implementing and improving things quickly. It's not rare for us to do release a day.</p>
-                </div>
-                <div class="value">
-                    <div class="value-icon">
-                        <i class="fa fa-exchange"></i>
-                    </div>
-                    <h3>Collaboration</h3>
-                    <p>We believe that collaboration can change and vastly improve the way we all work.</p>
-                </div>
-                <div class="value">
-                    <div class="value-icon">
-                        <i class="fa fa-road"></i>
-                    </div>
-                    <h3>Cutting edge technology</h3>
-                    <p>We use and build cutting edge technology to power ours products.</p>
-                </div>
-                <div class="value">
-                    <div class="value-icon">
-                        <i class="fa fa-heart-o"></i>
-                    </div>
-                    <h3>Passion</h3>
-                    <p>Improving how developers work, is something we're very passionate about.</p>
-                </div>
-            </div>
-        </section>
-
-        <!-- Team -->
-        <section class="clearfix">
-            <h1>Our Team</h1>
-            <ul class="team">
-                <li>
-                    <a href="https://github.com/SamyPesse">
-                        <img src="images/team/samy.png">
-                    </a>
-                    <h4>Samy Pessé</h4>
-                    <p>Co-Founder, Front-end lover</p>
-                </li>   
-                <li>
-                    <a href="https://github.com/AaronO">
-                        <img src="images/team/aaron.jpg">
-                    </a>
-                    <h4>Aaron O'Mullan</h4>
-                    <p>Co-Founder, Back-end lover</p>
-                </li> 
-                <li>
-                    <a href="mailto:contact@friendco.de" class="icon"><i class="fa fa-plus"></i></a>
-                    <h4>You</h4>
-                    <p>Want to join the team ?</p>
-                </li>
-            </ul>
-        </section>
-
-        <!-- Investors -->
-        <section class="clearfix">
-            <h1>Our Investors &amp; Advisors</h1>
-            <ul class="team"> 
-                <li>
-                    <a href="https://twitter.com/jberrebi">
-                        <img src="images/investors/jberrebi.jpeg">
-                    </a>
-                    <h4>Jeremie Berrebi</h4>
-                    <p>Investor (Kima Ventures)</p>
-                </li>
-                <li>
-                    <a href="https://twitter.com/_javigon">
-                        <img src="images/investors/javier.jpeg">
-                    </a>
-                    <h4>Javier Gonzalez</h4>
-                    <p>Advisor (Business Angel)</p>
-                </li> 
-            </ul>
-        </section>
-
-        <footer>
-            Made with <i class="fa fa-heart"></i> in Paris and San Francisco
-        </footer>
-    </body>
+    <body></body>
 </html>
